--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -1,23 +1,14 @@
 <section class="vh-100">
     <div class="container py-5 h-100">
         <div class="row d-flex align-items-center justify-content-center h-100">
-            <div class="col-md-8 col-lg-7 col-xl-6">
-                <!--                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"-->
-                <img src="assets/images/tea3.png"
-                     class="img-fluid" alt="Phone image">
-            </div>
+            <div class="col-md-8 col-lg-7 col-xl-6"><img src="assets/images/Purple_Perfume1.jpeg" class="img-fluid" alt="Phone image"></div>
             <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
                 <form id = "login-form">
-
-                    <div class="text-center">
-                        <h1 class="mt-1 mb-5 pb-1">Log In</h1>
-                    </div>
-
-
+                    <div class="text-center"><h1 class="mt-1 mb-5 pb-1">Sign In</h1></div>
                     <!-- Email input -->
                     <div data-mdb-input-init class="form-outline mb-4">
                         <input type="email" id="email" name = "email" class="form-control form-control-lg" />
-                        <label class="form-label" for="email">Email address</label>
+                        <label class="form-label" for="email">E-mail Address</label>
                     </div>
 
                     <!-- Password input -->
@@ -25,15 +16,8 @@
                         <input type="password" id="password" name = "password" class="form-control form-control-lg" />
                         <label class="form-label" for="password">Password</label>
                     </div>
-
-
-
-
-                    <!-- Submit button -->
                     <button type="submit"  data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block">Log in</button>
-
-
-
+                    <p class="text-center text-muted mt-5 mb-0">Don't have an account? <a href="#signin" class="fw-bold text-body"><u>Sign Up Here!</u></a></p>
                 </form>
             </div>
         </div>
