--- a/frontend/views/admin_dashboard.html
+++ b/frontend/views/admin_dashboard.html
@@ -3,7 +3,7 @@
     <div class="row mb-4">
         <div class="col-lg-12">
             <div class="card border-dark">
-                <div class="card-header" style="background-color: #53342A; color: white;">
+                <div class="card-header" style="background-color: #6e0e9b; color: white;">
                     <h5 class="mb-0">Orders Management</h5>
                 </div>
                 <div class="card-body">
@@ -83,7 +83,7 @@
     <div class="row mb-4">
         <div class="col-lg-12">
             <div class="card border-dark">
-                <div class="card-header" style="background-color: #53342A; color: white;">
+                <div class="card-header" style="background-color: #6e0e9b; color: white;">
                     <div class="d-flex justify-content-between align-items-center">
                         <h5 class="mb-0">Items Management</h5>
                         <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#addItemModal">
@@ -107,7 +107,7 @@
 <div class="modal fade" id="addItemModal" tabindex="-1" aria-labelledby="addItemModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #53342A; color: white;">
+            <div class="modal-header" style="background-color: #6e0e9b; color: white;">
                 <h5 class="modal-title">Add New Item</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
@@ -153,7 +153,7 @@
 <div class="modal fade" id="editItemModal" name="editItemModal" tabindex="-1" aria-labelledby="editItemModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #53342A; color: white;">
+            <div class="modal-header" style="background-color: #6e0e9b; color: white;">
                 <h5 class="modal-title">Edit Item</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
