--- a/frontend/views/cart.html
+++ b/frontend/views/cart.html
@@ -1,8 +1,8 @@
-<section class="h-100 h-custom" style="background: linear-gradient(to right, #776b5f, #9c8f7f, #ad9b82, #c2af97, #e0c9a6);">
+<section class="h-100 h-custom" style="background: linear-gradient(135deg, #ffffff, #b3afb6);">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col">
-        <div class="card" style="background-color: #eee; border: 2px solid #53342A;">
+        <div class="card" style="background-color: #eee; border: 2px solid #6E0E9B;">
           <div class="card-body p-4">
             <div class="row">
 
@@ -88,16 +88,14 @@
                       <div class="d-flex justify-content-center gap-3">
                         <!-- Pay with Card -->
                         <button type="submit" id="pay-card-btn" class="btn btn-lg btn-white-custom"
-                          style="background-color: #efe4d4; border: 1px solid #53342a; color: #53342a;">
+                          style="background-color: #efe4d4; border: 1px solid #6e0e9b; color: #6e0e9b;">
                           <div class="d-flex align-items-center gap-2">
                             <span>Pay with Card</span>
                             <i class="fas fa-credit-card"></i>
                           </div>
                         </button>
                       </div>
-
                     </form>
-                    <!-- END FORM -->
 
                   </div>
                 </div>
