--- a/frontend/views/signin.html
+++ b/frontend/views/signin.html
@@ -1,27 +1,16 @@
 <section class="vh-100">
     <div class="container py-5 h-100">
         <div class="row d-flex align-items-center justify-content-center h-100">
-            <div class="col-md-8 col-lg-7 col-xl-6">
-<!--                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"-->
-                <img src="assets/images/tea3.png"
-                     class="img-fluid" id = "signup_img" alt="Phone image">
-            </div>
+            <div class="col-md-8 col-lg-7 col-xl-6"><img src="assets/images/Purple_Perfume1.jpeg"class="img-fluid" id = "signup_img" alt="Phone image"></div>
             <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
                 <form id = "signup-form">
-
-                    <div class="text-center">
-                        <h1 class="mt-1 mb-5 pb-1">Sign Up</h1>
-                    </div>
-
+                    <div class="text-center"><h1 class="mt-1 mb-5 pb-1">Sign Up</h1></div>
                     <div data-mdb-input-init class="form-outline mb-4">
                         <input type="text" id="name" name = "name" class="form-control form-control-lg" />
                         <label class="form-label" for="name">Full name</label>
                     </div>
-
                     <div class="row mb-4">
-                        <!-- Full Name Input -->
                         <div class="col-md-6">
-
                             <div data-mdb-input-init class="form-outline">
                                 <div class="input-group input-group-lg">
                                     <span class="input-group-text" id="basic-addon1">@</span>
@@ -40,7 +29,6 @@
                         </div>
                     </div>
 
-<!--                    Adresa-->
                     <div data-mdb-input-init class="form-outline mb-4">
                         <input type="text" id="address" name = "address" class="form-control form-control-lg" />
                         <label class="form-label" for="address">Address</label>
@@ -63,13 +51,9 @@
                         <label class="form-label" for="repeat_password_signup">Repeat password</label>
                     </div>
 
-
                     <!-- Submit button -->
                     <button type="submit"  data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block">Sign in</button>
-                    <p class="text-center text-muted mt-5 mb-0">Don't have an account? <a href="#signup" class="fw-bold text-body"><u>Sign Up Here!</u></a></p>
-
-
-
+                    <p class="text-center text-muted mt-5 mb-0">Already have an account? <a href="#login" class="fw-bold text-body"><u>Sign In Here!</u></a></p>
                 </form>
             </div>
         </div>
