--- a/frontend/views/all_products.html
+++ b/frontend/views/all_products.html
@@ -2,7 +2,7 @@
   <!-- below modal -->
     <div class="container py-5">
       <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#filterModal" style="background: linear-gradient(135deg, #ffffff, #b3afb6);">Open Filters</button>
+      <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#filterModal" style="background: linear-gradient(135deg, #8a6b99, #6e0e9b);">Open Filters</button>
     <div id="products-list" class="row"></div>
   </section>
 
@@ -89,9 +89,3 @@ document.getElementById("applyBtn").addEventListener("click", function () {
 </script>
 
 <script src="./services/product-service.js"></script>
-<!-- <script>
-  $(document).ready(function () {
-    ProductService.renderCategoryCheckboxes();
-    ProductService.loadProducts();
-  });
-</script> -->
