--- a/frontend/views/admin_dashboard.html
+++ b/frontend/views/admin_dashboard.html
@@ -3,9 +3,7 @@
     <div class="row mb-4">
         <div class="col-lg-12">
             <div class="card border-dark">
-                <div class="card-header" style="background-color: #6e0e9b; color: white;">
-                    <h5 class="mb-0">Orders Management</h5>
-                </div>
+                <div class="card-header" style="background-color: #6e0e9b; color: white;"><h5 class="mb-0">Orders Management</h5></div>
                 <div class="card-body">
                     <input type="text" id="orderSearch" class="form-control mb-3" placeholder="Search orders...">
                     <div class="table-responsive">
@@ -86,9 +84,7 @@
                 <div class="card-header" style="background-color: #6e0e9b; color: white;">
                     <div class="d-flex justify-content-between align-items-center">
                         <h5 class="mb-0">Items Management</h5>
-                        <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#addItemModal">
-                            Add New Item
-                        </button>
+                        <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#addItemModal">Add New Item</button>
                     </div>
                 </div>
                 <div class="card-body">
@@ -137,8 +133,7 @@
                     <div class="mb-3">
                         <label for="itemDescription" class="form-label">Description</label>
                         <input type="text" class="form-control" id="addItemDescription" name="description" required>
-                    </div>
-                    
+                    </div> 
                 </form>
             </div>
             <div class="modal-footer">
@@ -149,7 +144,7 @@
     </div>
 </div>
 
-<!-- Edit Item Modal (Same as Add Item Modal) -->
+<!-- Edit Item Modal -->
 <div class="modal fade" id="editItemModal" name="editItemModal" tabindex="-1" aria-labelledby="editItemModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -186,13 +181,11 @@
                         <label for="itemDescription" class="form-label">Description</label>
                         <input type="text" class="form-control" id="itemDescription1" name="description" required>
                     </div>
-
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                 <button type="submit" form="editItemForm" class="btn btn-primary">Save</button>
                 </form>
             </div>
             <div class="modal-footer">
-
             </div>
         </div>
     </div>
