--- a/frontend/views/cart.html
+++ b/frontend/views/cart.html
@@ -24,7 +24,7 @@
               <!-- Card Details Column -->
               <div class="col-lg-5 d-flex flex-column">
                 <div class="card bg-primary text-white rounded-3 h-100 align-self-stretch">
-                  <div class="card-body d-flex flex-column justify-content-center" style="background-color: #4F625A; height: 100%;">
+                  <div class="card-body d-flex flex-column justify-content-center" style="background-color: #6E0E9B; height: 100%;">
                     <div class="d-flex justify-content-between align-items-center mb-4">
                       <h5 class="mb-0">Card details</h5>
                     </div>
@@ -36,14 +36,14 @@
                         <div class="col-md-6">
                           <div class="form-outline form-white">
                             <input type="text" name="name" id="name" class="form-control form-control-lg"
-                              style="background-color: #efe4d4;" placeholder="Name" size="7" />
+                              style="background-color: #ffffff;" placeholder="Name" size="7" />
                             <label class="form-label text-white" for="name">Name</label>
                           </div>
                         </div>
                         <div class="col-md-6">
                           <div class="form-outline form-white">
                             <input type="text" name="surname" id="surname" class="form-control form-control-lg"
-                              style="background-color: #efe4d4;" placeholder="Surname" size="7" />
+                              style="background-color: #ffffff;" placeholder="Surname" size="7" />
                             <label class="form-label text-white" for="surname">Surname</label>
                           </div>
                         </div>
@@ -51,7 +51,7 @@
 
                       <div class="form-outline form-white mb-4">
                         <input type="text" name="address" id="address" class="form-control form-control-lg"
-                          placeholder="Address" style="background-color: #efe4d4;" />
+                          placeholder="Address" style="background-color: #ffffff;" />
                         <label class="form-label text-white" for="address">Address</label>
                       </div>
 
@@ -59,14 +59,14 @@
                         <div class="col-md-6">
                           <div class="form-outline form-white">
                             <input type="text" name="city" id="city" class="form-control form-control-lg"
-                              style="background-color: #efe4d4;" placeholder="City" size="7" />
+                              style="background-color: #ffffff;" placeholder="City" size="7" />
                             <label class="form-label text-white" for="city">City</label>
                           </div>
                         </div>
                         <div class="col-md-6">
                           <div class="form-outline form-white">
                             <input type="text" name="country" id="country" class="form-control form-control-lg"
-                              style="background-color: #efe4d4;" placeholder="Country" size="7" />
+                              style="background-color: #ffffff;" placeholder="Country" size="7" />
                             <label class="form-label text-white" for="country">Country</label>
                           </div>
                         </div>
@@ -74,7 +74,7 @@
 
                       <div class="form-outline form-white mb-4">
                         <input type="text" name="phone" id="phone" class="form-control form-control-lg"
-                          placeholder="Phone Number" style="background-color: #efe4d4;" />
+                          placeholder="Phone Number" style="background-color: #ffffff;" />
                         <label class="form-label text-white" for="phone">Phone Number</label>
                       </div>
 
@@ -88,7 +88,7 @@
                       <div class="d-flex justify-content-center gap-3">
                         <!-- Pay with Card -->
                         <button type="submit" id="pay-card-btn" class="btn btn-lg btn-white-custom"
-                          style="background-color: #efe4d4; border: 1px solid #6e0e9b; color: #6e0e9b;">
+                          style="background-color: #ffffff; border: 1px solid #6e0e9b; color: #6e0e9b;">
                           <div class="d-flex align-items-center gap-2">
                             <span>Pay with Card</span>
                             <i class="fas fa-credit-card"></i>
