--- a/frontend/views/profile.html
+++ b/frontend/views/profile.html
@@ -28,17 +28,17 @@
                         <hr>
                         <div class="row">
                             <div class="col-sm-3"><p class="mb-0">Username</p></div>
-                            <div class="col-sm-9"><p class="text-muted mb-0">Anja</p></div>
+                            <div class="col-sm-9"><p class="text-muted mb-0">John</p></div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-sm-3"><p class="mb-0">Email</p></div>
-                            <div class="col-sm-9"><p class="text-muted mb-0">example@example.com</p></div>
+                            <div class="col-sm-9"><p class="text-muted mb-0">john@example.com</p></div>
                         </div>
                         <hr>
                         <div class="row">
                             <div class="col-sm-3"><p class="mb-0">Date of Birth</p></div>
-                            <div class="col-sm-9"><p class="text-muted mb-0">27.01.2024.</p></div>
+                            <div class="col-sm-9"><p class="text-muted mb-0">27.01.2008.</p></div>
                         </div>
                         <hr>
                         <div class="row">
@@ -54,11 +54,7 @@
         <div class="row mb-4">
             <div class="col-lg-12">
                 <div class="card mb-4" style="border: 2px solid #6e0e9b; ">
-
-                    <div class="card-header" style="background-color: #6e0e9b; color: white;">
-
-                        <h5 class="mb-0">Recent Purchases</h5>
-                    </div>
+                    <div class="card-header" style="background-color: #6e0e9b; color: white;"><h5 class="mb-0">Recent Purchases</h5></div>
                     <div class="card-body">
                         <div class="table-responsive">
                             <table class="table table-hover" id="dashboard_table1">
