--- a/frontend/views/signin.html
+++ b/frontend/views/signin.html
@@ -1,14 +1,20 @@
 <section class="vh-100">
     <div class="container py-5 h-100">
         <div class="row d-flex align-items-center justify-content-center h-100">
-            <div class="col-md-8 col-lg-7 col-xl-6"><img src="assets/images/Purple_Perfume1.jpeg"class="img-fluid" id = "signup_img" alt="Phone image"></div>
             <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
                 <form id = "signup-form">
                     <div class="text-center"><h1 class="mt-1 mb-5 pb-1">Sign Up</h1></div>
                     <div data-mdb-input-init class="form-outline mb-4">
                         <input type="text" id="name" name = "name" class="form-control form-control-lg" />
-                        <label class="form-label" for="name">Full name</label>
+                        <label class="form-label" for="name">Full Name</label>
                     </div>
+                    
+
+                    <div data-mdb-input-init class="form-outline mb-4">
+                        <input type="text" id="address" name = "address" class="form-control form-control-lg" />
+                        <label class="form-label" for="address">Address</label>
+                    </div>
+
                     <div class="row mb-4">
                         <div class="col-md-6">
                             <div data-mdb-input-init class="form-outline">
@@ -24,20 +30,15 @@
                         <div class="col-md-6">
                             <div data-mdb-input-init class="form-outline">
                                 <input type="date" id="date_of_birth"  name ="date_of_birth" class="form-control form-control-lg" />
-                                <label class="form-label" for="date_of_birth">Date of birth</label>
+                                <label class="form-label" for="date_of_birth">Date of Birth</label>
                             </div>
                         </div>
-                    </div>
-
-                    <div data-mdb-input-init class="form-outline mb-4">
-                        <input type="text" id="address" name = "address" class="form-control form-control-lg" />
-                        <label class="form-label" for="address">Address</label>
                     </div>
 
                     <!-- Email input -->
                     <div data-mdb-input-init class="form-outline mb-4">
                         <input type="email" id="email" name = "email" class="form-control form-control-lg" />
-                        <label class="form-label" for="email">Email address</label>
+                        <label class="form-label" for="email">E-mail Address</label>
                     </div>
 
                     <!-- Password input -->
@@ -48,7 +49,7 @@
 
                     <div data-mdb-input-init class="form-outline mb-4">
                         <input type="password" id="repeat_password_signup" name = "repeat_password_signup"  class="form-control form-control-lg" />
-                        <label class="form-label" for="repeat_password_signup">Repeat password</label>
+                        <label class="form-label" for="repeat_password_signup">Confirm Password</label>
                     </div>
 
                     <!-- Submit button -->
